  Patch by Adam Turner.

* Refactored tests in ``test/`` towards using common ``unittest`` idioms.
  Patch by Adam Turner.

* docutils/languages/
  docutils/parsers/rst/languages/

  - Support Ukrainian. Patch by Dmytro Kazanzhy.

* docutils/nodes.py

  - Fix previous_sibling() method that led to invalid HTML in some cases
    (cf. patch #195).

* docutils/writers/latex2e/__init__.py

  - Do not insert ``\usepackage[utf8]{inputenc}`` into UTF-8 encoded
    LaTeX sources. UTF-8 is the default encoding for LaTeX2e since 2018.

* docutils/writers/latex2e/titlepage.tex

  - Drop "fixltx2e" package call from template. (Obsolete since 2015
    and dropped from other templates since Docutils 0.14.)

* docutils/writers/manpage.py

  - Do not output empty "manual" in ``.TH``

* docutils/utils/math/latex2mathml.py

  - Support "mod" notation for modulo operation/modulus arithmetic.

* docutils/utils/math/tex2mathml_extern.py

  - Support `pandoc` as LaTeX to MathML converter. Patch by Ximin Luo.

* test/coverage.sh

  Removed. Use the coverage.py_ project instead,
  ``coverage run test/alltests.py`` and ``coverage report``.
  Patch by Adam Turner.

  .. _coverage.py: https://pypi.org/project/coverage/


Release 0.19 (2022-07-05)
=========================

* General

  - Dropped support for Python 2.7, 3.5, and 3.6. and removed compatibility
    hacks from code and tests.
  - Code cleanup,
    check PEP 8 conformity with `flake8` (exceptions in file tox.ini).

* docutils/__main__.py

  - New module. Support for ``python -m docutils``.
    Also used for the ``docutils`` console script `entry point`.

* docutils/core.py:

  - Let `Publisher.publish()` print info and prompt when waiting for input
    from a terminal (cf. https://clig.dev/#interactivity).
  - Respect "input_encoding_error_handler" setting when opening a source.

* docutils/io.py

  - New function `error_string()`
    obsoletes `utils.error_reporting.ErrorString`.